[package]
name = "midikraken"
version = "0.1.0"
authors = ["Florian Jung <flo@windfis.ch>"]
edition = "2018"
license = "GPL-3.0-only"

[features]
benchmark = []
debugprint = []
debugpanic = []
bootloader = []

[dependencies]
cortex-m = "0.6.7"
cortex-m-rt = ">=0.6"
cortex-m-rtic = ">=0.5"
stm32f1xx-hal = { version = "0.7", features = ["rt", "stm32f103", "stm32-usbd", "medium"] }
heapless = "0.6"
parse_midi = { path = "../lib/parse_midi" }
generic-array = "0.14"
embedded-dma = {version = "0.1" }
lazy_static = { version = "1", features=["spin_no_std"] }

display-interface = "0.4"
display-interface-spi = "0.4"
embedded-graphics = "0.7"
st7789 = { version = "0.6", features = ["batch"] }


usb-device = { version = ">=0.2.1", features = ["control-buffer-1024"] }
usbd-midi = { path="../lib/usbd-midi" }
embedded-hal = ">=0.2.3"
tim2_interrupt_handler = { path = "tim2_interrupt_handler" }
simple-flash-store = { git = "https://github.com/Windfisch/simple-flash-store", revision="5891dfdff74937d0865975c7990808b13964ccbf" }

[build-dependencies]
vergen = "3"

[patch.crates-io]
stm32f1xx-hal = { git = "https://github.com/Windfisch/stm32f1xx-hal", branch="midikraken" }
#stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal", revision="5776ccd780041a7669c0a9d7099de6d18226d679" }
#stm32f1xx-hal = { path = "/home/flo/stm32f1xx-hal" }
usb-device = { git = "https://github.com/Windfisch/usb-device", branch = "descriptor-writer-updates-and-buffer-sizes" }

[profile.dev]
opt-level = "z"
codegen-units = 1
debug = true
lto = true
[profile.release]
opt-level = "s"
codegen-units = 1
debug = true
lto = true

[profile.release.package.st7789]
opt-level = 3
[profile.release.package.display-interface]
opt-level = 3
[profile.release.package.display-interface-spi]
opt-level = 3
[profile.release.package.embedded-graphics]
opt-level = 3
[profile.release.package.stm32f1xx-hal]
opt-level = 3
[profile.release.package.stm32f1]
opt-level = 3
[profile.release.package.tim2_interrupt_handler]
opt-level = 3
